--- a/src/styles/pillCrusher.css
+++ b/src/styles/pillCrusher.css
@@ -1,3 +1,6 @@
 .bg-DF2935{
-    background-color: #DF2935;
+    background-color: #7D0B0A;
+    box-shadow: 0px 10px 20px rgb(255, 255, 255), 0px -10px 20px rgb(255, 255, 255);
+    /* border-bottom: 1px solid white;
+    border-top: 1px solid white; */
 }
